--- a/app/src/main/res/layout/activity_face_to_face.xml
+++ b/app/src/main/res/layout/activity_face_to_face.xml
@@ -10,7 +10,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:background="@color/color_E81534"
+        android:background="@color/white"
         android:paddingRight="10dp">
 
         <LinearLayout
@@ -24,7 +24,7 @@
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:padding="4dp"
-                android:src="@mipmap/icon_back" />
+                android:src="@mipmap/left_arrow_red_icon" />
         </LinearLayout>
 
 
@@ -33,7 +33,7 @@
             android:layout_height="match_parent"
             android:gravity="center"
             android:text="面对面邀请"
-            android:textColor="@color/white"
+            android:textColor="@color/color_333333"
             android:textSize="17sp" />
 
 
@@ -58,6 +58,7 @@
                 android:layout_marginLeft="5dp"
                 android:layout_weight="2"
                 android:gravity="left"
+                android:textColor="@color/color_333333"
                 android:text="扫一扫"
                 android:textSize="14sp" />
         </LinearLayout>
@@ -158,7 +159,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="20dp"
             android:background="@drawable/textview_corner"
-            android:text="扫一扫上面的二维码图案，成为我的豆粉" />
+            android:text="扫一扫上面的二维码图案，成为我的粉丝" />
     </LinearLayout>
 
     <!--绑定的用户信息-->
