--- a/app/src/main/res/layout/activity_invitation_dou_fen.xml
+++ b/app/src/main/res/layout/activity_invitation_dou_fen.xml
@@ -11,7 +11,7 @@
         android:id="@+id/title_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        ptr:middleText="邀请豆粉" />
+        ptr:middleText="邀请粉丝" />
 
     <LinearLayout
         android:layout_width="match_parent"
