--- a/app/src/main/res/layout/my_title_bar.xml
+++ b/app/src/main/res/layout/my_title_bar.xml
@@ -31,7 +31,7 @@
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:padding="4dp"
-                android:src="@mipmap/icon_back" />
+                android:src="@mipmap/left_arrow_red_icon" />
 
             <TextView
                 android:id="@+id/tv_left"
@@ -42,7 +42,7 @@
                 android:ellipsize="end"
                 android:gravity="center"
                 android:maxLines="1"
-                android:textColor="@color/white"
+                android:textColor="@color/color_333333"
                 android:textSize="18sp" />
         </LinearLayout>
 
@@ -55,7 +55,7 @@
             android:maxLines="1"
             android:gravity="center"
             android:layout_marginLeft="80dp"
-            android:textColor="@color/white"
+            android:textColor="@color/color_333333"
             android:textSize="16sp"
             tools:text="Title" />
 
@@ -98,7 +98,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="4dp"
-                android:textColor="@color/white"
+                android:textColor="@color/color_333333"
                 android:textSize="15sp"
                 android:visibility="visible" />
 
