--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -26,6 +26,7 @@
     <color name="color_8A552A">#8A552A</color>
     <color name="color_FFE300">#FFE300</color>
     <color name="color_FF9933">#FF9933</color>
+    <color name="color_F23648">#F23648</color>
 
     <color name="white">#FFFFFF</color>
     <color name="black">#333333</color>
