--- a/app/src/main/res/layout/fragment_good_category.xml
+++ b/app/src/main/res/layout/fragment_good_category.xml
@@ -43,6 +43,7 @@
 
             <View
                 android:layout_width="1px"
+                android:visibility="gone"
                 android:background="#e5e5e5"
                 android:layout_height="match_parent"/>
 
