--- a/app/src/main/res/layout/found_topic_item_layout.xml
+++ b/app/src/main/res/layout/found_topic_item_layout.xml
@@ -1,12 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <ImageView
-        android:id="@+id/found_item_iv"
+    <android.support.v7.widget.CardView
+        android:id="@+id/cardview_layout"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:scaleType="fitXY"/>
+        android:layout_height="wrap_content"
+        android:layout_margin="3dp"
+        app:cardCornerRadius="3dp"
+        app:cardElevation="3dp">
+
+        <ImageView
+            android:id="@+id/found_item_iv"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:scaleType="fitXY"/>
+    </android.support.v7.widget.CardView>
 
 </RelativeLayout>
