--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -8,8 +8,8 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:background="@color/color_E81534"
+        android:layout_height="45dp"
+        android:background="@color/color_F23648"
         android:gravity="center_vertical">
 
         <RelativeLayout
@@ -86,7 +86,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="120dp"
-                android:background="@mipmap/ic_top_bg"
+                android:background="@color/color_F23648"
                 android:orientation="vertical">
 
                 <LinearLayout
