绑定界面UI修改

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -28,6 +28,8 @@
     <color name="color_FF9933">#FF9933</color>
     <color name="color_F23648">#F23648</color>
     <color name="color_CDCDCD">#CDCDCD</color>
+    <color name="color_EB2338">#EB2338</color>
+    <color name="color_FEED00">#FEED00</color>
 
     <color name="white">#FFFFFF</color>
     <color name="black">#333333</color>
