--- a/app/src/main/res/layout/bind_invitation_code_layout.xml
+++ b/app/src/main/res/layout/bind_invitation_code_layout.xml
@@ -6,11 +6,10 @@
     android:background="@android:color/white"
     android:paddingBottom="30dp">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="170dp"
-        android:background="@mipmap/my_money_public_bottom"
-        android:orientation="vertical">
+        android:background="@mipmap/my_money_public_bottom">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -28,42 +27,39 @@
 
         </RelativeLayout>
 
-        <TextView
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
-            android:layout_marginTop="4dp"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            android:textColor="@android:color/white"
-            android:textScaleX="1.2"
-            android:text="接受邀请"/>
+            android:orientation="vertical"
+            android:layout_marginBottom="50dp"
+            android:layout_alignParentBottom="true">
 
-        <TextView
-            android:id="@+id/bind_number_view"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
-            android:textColor="@color/color_8A552A"
-            android:textSize="13sp"
-            android:layout_marginTop="12dp"
-            android:text="你的粘贴板存在邀请码"/>
+            <TextView
+                android:id="@+id/bind_number_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:textColor="@color/white"
+                android:textSize="13sp"
+                android:text="你的粘贴板存在邀请码"/>
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
-            android:textColor="@color/color_8A552A"
-            android:textSize="13sp"
-            android:layout_marginTop="2dp"
-            android:text="是否立即接受邀请？"/>
-    </LinearLayout>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:textColor="@color/white"
+                android:textSize="13sp"
+                android:layout_marginTop="2dp"
+                android:text="是否立即接受邀请？"/>
+        </LinearLayout>
+
+    </RelativeLayout>
 
 
-    <com.tudouni.makemoney.view.ShapeImageView
+    <ImageView
         android:id="@+id/ivPhoto"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
         android:layout_gravity="center_horizontal"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="130dp"
@@ -95,8 +91,8 @@
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
         android:layout_below="@id/bind_invitation_code_layout_num"
-        android:textColor="@color/color_333333"
-        android:background="@color/color_FFE300"
+        android:textColor="@color/white"
+        android:background="@drawable/bind_button_shape"
         android:layout_marginTop="10dp"
         android:paddingLeft="24dp"
         android:paddingRight="24dp"
