1.替换分享海报中的背景图。 2.修改消息中的展示逻辑。 3.修复商城顶部消息图标。

--- a/app/src/main/res/layout/fragment_mall.xml
+++ b/app/src/main/res/layout/fragment_mall.xml
@@ -53,7 +53,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
                 android:layout_marginRight="10dp"
-                android:src="@{mallViewModel.hasUnreadMsg ? @drawable/mall_msg_with_dot : @drawable/user_chat}" />
+                android:src="@{mallViewModel.hasUnreadMsg ? @drawable/mall_msg_with_dot : @drawable/mall_msg}" />
 
 
         </RelativeLayout>
