--- a/app/src/main/res/layout/item_good.xml
+++ b/app/src/main/res/layout/item_good.xml
@@ -25,6 +25,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@{item.name}"
+            android:gravity="center"
             android:layout_marginBottom="8dp"
             android:textColor="@color/black"
             android:textSize="12sp" />
