--- a/app/src/main/res/layout/item_good_grid.xml
+++ b/app/src/main/res/layout/item_good_grid.xml
@@ -12,15 +12,35 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <TextView
-            android:layout_marginTop="10dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="left"
-            android:textStyle="bold"
-            android:text="@{item.name}"
-            android:textColor="@color/black"
-            android:textSize="12sp" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:layout_height="60dp">
+
+            <View
+                android:layout_width="25dp"
+                android:background="#dedede"
+                android:layout_height="2dp"/>
+
+            <TextView
+                android:paddingLeft="20dp"
+                android:paddingRight="20dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textStyle="bold"
+                android:text="@{item.name}"
+                android:textColor="@color/black"
+                android:textSize="13sp" />
+
+            <View
+                android:layout_width="25dp"
+                android:background="#dedede"
+                android:layout_height="2dp"/>
+
+        </LinearLayout>
+
+
 
         <android.support.v7.widget.RecyclerView
             android:paddingTop="10dp"
