--- a/app/src/main/res/layout/fragment_mall.xml
+++ b/app/src/main/res/layout/fragment_mall.xml
@@ -31,14 +31,16 @@
                 android:layout_marginLeft="10dp"
                 android:src="@mipmap/ic_launcher" />
 
-            <TextView
+            <EditText
                 android:id="@+id/tv_search_bar"
                 android:layout_marginTop="10dp"
                 android:layout_width="match_parent"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="60dp"
-                android:text="    粘贴宝贝标题，先领券再购物"
+                android:hint="    粘贴宝贝标题，先领券再购物"
                 android:textSize="13sp"
+                android:focusable="false"
+                android:imeOptions="actionSearch"
                 android:paddingLeft="10dp"
                 android:drawableLeft="@mipmap/category_search_icon"
                 android:gravity="center|left"
