--- a/app/src/main/res/layout/item_mall_recommend_good.xml
+++ b/app/src/main/res/layout/item_mall_recommend_good.xml
@@ -18,7 +18,7 @@
         <RelativeLayout
             android:id="@+id/rl_img"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_height="200dp">
 
             <ImageView
                 android:id="@+id/iv_good_img"
@@ -59,8 +59,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:padding="5dp"
-            android:paddingBottom="5dp"
+            android:padding="10dp"
             android:background="@drawable/shape_stoke_mall_good"
             android:layout_height="wrap_content"
             android:orientation="vertical">
@@ -73,21 +72,19 @@
                 android:padding="2dp"
                 android:text="@{item.title}"
                 android:textColor="@color/black"
-                android:textSize="12sp" />
+                android:textSize="13sp" />
 
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp"
-                android:layout_marginRight="5dp"
-                android:layout_marginTop="5dp">
+                android:layout_marginTop="10dp">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@{@string/tb_price + item.org_price}"
                     android:textColor="#868686"
-                    android:textSize="14sp" />
+                    android:textSize="12sp" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -95,7 +92,7 @@
                     android:layout_alignParentRight="true"
                     android:text="@{item.calcSalesCount()}"
                     android:textColor="#868686"
-                    android:textSize="14sp" />
+                    android:textSize="12sp" />
             </RelativeLayout>
 
             <RelativeLayout
@@ -104,9 +101,9 @@
                 android:layout_marginTop="5dp">
 
                 <LinearLayout
+                    android:layout_marginTop="10dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
                     android:orientation="horizontal">
 
                     <TextView
@@ -120,18 +117,21 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@{item.price}"
+                        android:textStyle="bold"
                         android:textColor="#fc5622"
                         android:textSize="14sp" />
                 </LinearLayout>
 
 
                 <TextView
-                    android:layout_width="75dp"
+                    android:layout_width="80dp"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
                     android:layout_marginRight="5dp"
+                    android:layout_marginTop="5dp"
                     android:background="@drawable/shape_coupon_bg"
                     android:gravity="center"
+                    android:textSize="12sp"
                     android:padding="2dp"
                     android:text="@{@string/mall_coupon + item.coupon_price + @string/fix2}"
                     android:textColor="@color/white" />
