--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -150,8 +150,8 @@
                 android:gravity="center_vertical"
                 android:orientation="horizontal"
                 android:paddingLeft="10dp"
-                android:visibility="gone"
-                android:paddingRight="10dp">
+                android:paddingRight="10dp"
+                android:visibility="gone">
 
                 <TextView
                     style="@style/tab_black_16_style"
@@ -218,7 +218,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="45dp"
                     android:layout_margin="10dp"
-                    android:background="@drawable/button_shape"
+                    android:background="@color/color_F23648"
                     android:gravity="center"
                     android:text="@string/logout"
                     android:textColor="@color/white"
