--- a/app/src/main/res/layout/item_message.xml
+++ b/app/src/main/res/layout/item_message.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
+    android:layout_height="80dp"
     android:background="@drawable/listview"
     android:gravity="center_vertical"
     android:orientation="horizontal"
-    android:padding="@dimen/dp_22">
+    android:padding="@dimen/dp_10">
 
     <ImageView
         android:id="@+id/iteam_icon"
@@ -49,7 +49,7 @@
             android:id="@+id/tv_message_content"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/dp_10"
+            android:layout_marginTop="5dp"
             android:ellipsize="end"
             android:singleLine="true"
             android:text="通知内容内容内容内容内容..."
