--- a/app/src/main/res/layout/mall_header_view.xml
+++ b/app/src/main/res/layout/mall_header_view.xml
@@ -40,8 +40,10 @@
 
         <!-- 自营品类 -->
         <LinearLayout
+            android:background="#f8f8f8"
             android:layout_width="match_parent"
             android:layout_height="170dp"
+
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:orientation="horizontal">
