--- a/app/src/main/res/layout/mall_header_view.xml
+++ b/app/src/main/res/layout/mall_header_view.xml
@@ -36,16 +36,14 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rv_album"
             android:layout_width="match_parent"
-            android:layout_height="103dp" />
+            android:layout_height="93dp" />
 
         <!-- 自营品类 -->
         <LinearLayout
             android:background="#f8f8f8"
             android:layout_width="match_parent"
+            android:padding="10dp"
             android:layout_height="170dp"
-
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
             android:orientation="horizontal">
 
             <ImageView
