--- a/app/src/main/res/layout/found_topic_item_layout.xml
+++ b/app/src/main/res/layout/found_topic_item_layout.xml
@@ -8,14 +8,14 @@
         android:id="@+id/cardview_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="2dp"
+        android:layout_margin="1.2dp"
         app:cardCornerRadius="3dp"
-        app:cardElevation="2dp">
+        app:cardElevation="1.2dp">
 
         <ImageView
             android:id="@+id/found_item_iv"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="100dp"
             android:scaleType="fitXY"/>
     </android.support.v7.widget.CardView>
 
