--- a/app/src/main/res/drawable/shape_stoke_mall_good.xml
+++ b/app/src/main/res/drawable/shape_stoke_mall_good.xml
@@ -4,7 +4,7 @@
         <shape>
             <stroke
                 android:width="1px"
-                android:color="#999999" />
+                android:color="#e0e0e0" />
         </shape>
     </item>
 </layer-list>
