修复品类点击不同步问题

--- a/app/src/main/res/layout/fragment_good_category.xml
+++ b/app/src/main/res/layout/fragment_good_category.xml
@@ -22,7 +22,7 @@
             android:drawableLeft="@mipmap/category_search_icon"
             android:gravity="center|left"
             android:background="@drawable/shape_category_search_bg"
-            android:textColor="@color/black"
+            android:textColor="#c7c7c9"
             android:layout_height="30dp" />
 
         <View
