--- a/app/src/main/res/layout/item_mall_recommend_good.xml
+++ b/app/src/main/res/layout/item_mall_recommend_good.xml
@@ -30,7 +30,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
-                android:background="#F05A23"
+                android:background="#f23648"
                 android:gravity="center_horizontal"
                 android:orientation="horizontal">
 
