--- a/app/src/main/res/drawable/shape_coupon_bg.xml
+++ b/app/src/main/res/drawable/shape_coupon_bg.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-    <gradient android:startColor="#E81534"
-        android:endColor="#F3751C"/>
+    <gradient android:startColor="#f23648"
+        android:endColor="#f23648"/>
     <corners android:radius="15dp"/>
 
 </shape>
