--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -17,6 +17,7 @@
     <dimen name="default_user_margen">10dp</dimen>
 
     <dimen name="dp_10">10dp</dimen>
+    <dimen name="dp_20">20dp</dimen>
     <dimen name="dp_22">22dp</dimen>
     <dimen name="dp_40">40dp</dimen>
 </resources>
